# Triggerbot

./: .gitignore  CMakeLists.txt  README.md
include/: Bot.h  MemoryReader.h
src/: Bot.cpp  MemoryReader.cpp  main.cpp
